--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
      margin-top: 20px; 
      margin-bottom: 20px;
 }
+#login_label{
+
+}
 #query_box{
      margin-left: 10px;                       
      margin-right: 10px;                      
